--- a/src/main/resources/assets/voyage_into_the_aether/lang/en_us.lang
+++ b/src/main/resources/assets/voyage_into_the_aether/lang/en_us.lang
@@ -19,3 +19,49 @@ tile.tin_ore.name=Tin Ore
 tile.gold_ore.name=Gold Ore
 tile.iron_ore.name=Iron Ore
 tile.curde_oil_ore.name=Crude Oil Ore
+# Aether Blocks
+
+tile.arctic_spikespring.name=Arctic Spikespring
+tile.barkshroom.name=Barkshroom
+tile.blue_swingtip.name=Blue Swingtip
+tile.forgotten_rose.name=Forgotten Rose
+tile.green_swingtip.name=Green Swingtip
+tile.highlands_bush.name=Highlands Bush
+tile.highlands_tulips.name=Highlands Tulips
+tile.irradiated_flower.name=Irradiated Flower
+tile.magnetic_shroom.name=Magnetic Shroom
+tile.neverbloom.name=Neverbloom
+tile.pink_swingtip.name=Pink Swingtip
+tile.quickshoot.name=Quickshoot
+tile.stoneshroom.name=Stoneshroom
+
+tile.aether_flower.purple_flower.name=Purple Flower
+tile.aether_flower.white_rose.name=White Rose
+tile.aether_flower.burstblossom.name=Burstblossom
+tile.aether_flower.aechor_sprout.name=Aechor Sprout
+
+tile.skyroot_sapling.blue_skyroot.name=Blue Skyroot Sapling
+tile.skyroot_sapling.green_skyroot.name=Green Skyroot Sapling
+tile.skyroot_sapling.dark_blue_skyroot.name=Dark Blue Skyroot Sapling
+tile.unique_sapling.amberoot.name=Amberoot Sapling
+tile.unique_sapling.mutant_tree.name=Edison's Crazy Mutant Tree Sapling
+tile.wisproot_sapling.wisproot_green.name=Green Wisproot Sapling
+tile.wisproot_sapling.wisproot_blue.name=Blue Wisproot Sapling
+tile.wisproot_sapling.wisproot_dark_blue.name=Dark Blue Wisproot Sapling
+tile.greatroot_sapling.green_greatroot.name=Green Greatroot Sapling
+tile.greatroot_sapling.blue_greatroot.name=Blue Greatroot Sapling
+tile.greatroot_sapling.dark_blue_greatroot.name=Dark Blue Greatroot Sapling
+
+
+tile.blue_skyroot_leaves.name=Blue Skyroot Leaves
+tile.green_skyroot_leaves.name=Green Skyroot Leaves
+tile.dark_blue_skyroot_leaves.name=Dark Blue Skyroot Leaves
+tile.blue_dark_skyroot_leaves.name=Blue Greatroot Leaves
+tile.green_dark_skyroot_leaves.name=Green Greatroot Leaves
+tile.dark_blue_dark_skyroot_leaves.name=Dark Blue Greatroot Leaves
+tile.blue_light_skyroot_leaves.name=Blue Wisproot Leaves
+tile.green_light_skyroot_leaves.name=Green Wisproot Leaves
+tile.dark_blue_light_skyroot_leaves.name=Dark Blue Wisproot Leaves
+tile.amberoot_leaves.name=Amberoot Leaves
+tile.mutant_leaves.name=Mutated Leaves
+tile.mutant_leaves_decorated.name=Decorated Mutated Leaves
